landing page change

--- a/_includes/about_modal.html
+++ b/_includes/about_modal.html
@@ -14,7 +14,7 @@
                         <h2>About</h2>
                         <hr class="star-primary">
                         <h4>HELLO</h4>
-                        <p>Jordan is a multidisciplinary designer and artist with a focus on interface design and user experience. She always wants to learn something new and a create positive impact.
+                        <p>Jordan is a multidisciplinary designer and artist with a focus on interface design and user experience. She always wants to learn something new and a create positive impact. She likes to make things, especially when it involves making things with other people.
                             <p>Get in touch: jordanwhitneymartin@gmail.com</p>
                             <p>And checkout: <a href="http://wewantto.design">we want to ___</a></p>
 
@@ -33,7 +33,6 @@
 
                                         <h4>SPEAKING</h4>
                                         <p>"Why Art Belongs in Science Museums" // NAEA Post-Op 2016 Symposium presentation</p>
-                                        <p><i><p style="color:#95a5a6;">Homepage adapted from movement interactive installation at the Chicago Art Department</i></p>
 
                                         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                                     </div>
