--- a/_includes/js.html
+++ b/_includes/js.html
@@ -9,12 +9,18 @@
   ga('send', 'pageview');
     </script>
 
+
  <!-- jQuery Version 1.11.0 -->
     <script src="{{ "/js/jquery-1.11.0.js" | prepend: site.baseurl }}"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
+    <!-- Playtime JavaScript Madness Clusterfuck-->
+       <script src="{{ "/js/TitleFun.js" | prepend: site.baseurl }}"></script>
+
+
     <!-- Bootstrap Core JavaScript -->
-    <script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
+
+ <script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
 
     <!-- Plugin JavaScript -->
     <script src="{{ "/js/jquery.easing.min.js" | prepend: site.baseurl }}"></script>
@@ -23,5 +29,6 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="{{ "/js/agency.js" | prepend: site.baseurl }}"></script>
-    <script src="{{ "/js/p5.min.js" | prepend: site.baseurl }}"></script>
+     <!-- jQuery Version 1.11.0 
+    <script src="{{ "/js/p5.min.js" | prepend: site.baseurl }}"></script>-->
 
