--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">{{site.title}}</a>
+            <a class="navbar-brand page-scroll" href="#page-top">JWM</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -39,10 +39,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h1 class="brand-heading"><span class="highlight">Jordan Whitney Martin</h1>
-                    <p class="intro-text"><span class="highlight">Likes to make things, especially when it involves making things with other people.</p></span>
+                    <h1 class="brand-heading js-site-title js-canvas-dom">Jordan Whitney Martin is a multidisciplinary designer and artist</h1>
                     <a class="page-scroll button" href="#portfolio">
-                        <div class="button-bottom"></div>
                         <div class="top">
                             <div class="label">SEE MY WORK</div>
                             <div class="button-border button-border-left"></div>
