--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">JWM</a>
+            <a class="navbar-brand page-scroll" href="#page-top">JWM✌︎</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
