--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -240,7 +240,7 @@ fieldset[disabled] .btn-xl.active {
     .navbar-default {
         padding: 10px 0;
         border: 0;
-        background-color: "transparent";
+        background-color: #42049B;
         -webkit-transition: padding .3s;
         -moz-transition: padding .3s;
         transition: padding .3s;
@@ -283,7 +283,6 @@ fieldset[disabled] .btn-xl.active {
     background: #42049B;
     height: 100vh;
     width: 100vw;
-    top: 0;
     right: 0;
     left: 0;
     z-index: -1;
@@ -294,20 +293,18 @@ fieldset[disabled] .btn-xl.active {
 @media (max-width: 768px) {    
  #bg {
     background: #42049B;
-    position: absolute;
     height: 100vh;
-    top: 0;
     right: 0;
     left: 0;
     z-index: -1;
-}
+ }
 }
 
 
 .intro {
     z-index: 100;
     position: absolute;
-    padding: 0px 0px;
+    padding: 0px 10px 0px 10px;
     text-align: left;
     margin-top: 60px;
 }
@@ -337,13 +334,13 @@ fieldset[disabled] .btn-xl.active {
 @media (min-width: 768px) {
     .intro {
         z-index: 100;
-        position: absolute;
+        position: relative;
         height:100%;
         width: 100%;
         margin-right: auto;
         margin-left: auto;
         display: block;
-        bottom:-25%;
+        bottom:-15%;
 
     }
 
