--- a/_includes/about_modal.html
+++ b/_includes/about_modal.html
@@ -14,7 +14,7 @@
                         <h2>About</h2>
                         <hr class="star-primary">
                         <h4>HELLO</h4>
-                        <p>Jordan is a multidisciplinary designer and artist with a focus on interface design and user experience. She always wants to learn something new and a create positive impact. She likes to make things, especially when it involves making things with other people.
+                        <p>Jordan is a multidisciplinary designer and artist with a focus on interface design and user experience. She always wants to learn something new and create a positive impact. She likes to make things, especially when it involves making things with other people.
                             <p>Get in touch: jordanwhitneymartin@gmail.com</p>
                             <p>And checkout: <a href="http://wewantto.design">we want to ___</a></p>
 
