--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,22 +23,23 @@
                     <a class="page-scroll" href="#portfolio">Work</a>
                 </li>
                 <li>
-                 <a class="page-scroll" class="portfolio-link" data-toggle="modal" href="#about-modal">About</a>
-             </li>
-         </ul>
-     </div>
-     <!-- /.navbar-collapse -->
- </div>
- <!-- /.container-fluid -->
+                   <a class="page-scroll" class="portfolio-link" data-toggle="modal" href="#about-modal">About</a>
+               </li>
+           </ul>
+       </div>
+       <!-- /.navbar-collapse -->
+   </div>
+   <!-- /.container-fluid -->
 </nav>
 
 <!-- Header -->
 <div id="bg">
-   <header class="intro">
-    <div class="intro-body">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2">
+ <header class="intro">
+     <div class="container">
+        <div class="row">
+            <div class="intro-body">
+
+            <div class="col-md-8">
                     <h1 class="brand-heading js-site-title js-canvas-dom">Jordan Whitney Martin is a multidisciplinary designer and artist</h1>
                     <a class="page-scroll button" href="#portfolio">
                         <div class="top">
