--- a/_includes/js.html
+++ b/_includes/js.html
@@ -15,7 +15,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
     <!-- Playtime JavaScript Madness Clusterfuck-->
-    <script src="{{ "/js/TitleFun.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/js/titleFun.min.js" | prepend: site.baseurl }}"></script>
 
 
     <!-- Bootstrap Core JavaScript -->
