--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -269,7 +269,7 @@ fieldset[disabled] .btn-xl.active {
     }
 }
 
-.loader {
+/*!.loader {
     position: fixed;
     left: 0px;
     top: 0px;
@@ -277,7 +277,7 @@ fieldset[disabled] .btn-xl.active {
     height: 100%;
     z-index: 9999;
     background: url('img/eyeloader.gif') 50% 50% no-repeat rgb(249,249,249);
-}
+}*/
 
 #bg {
     background: #42049B;
