--- a/_includes/about_modal.html
+++ b/_includes/about_modal.html
@@ -14,7 +14,7 @@
                         <h2>About</h2>
                         <hr class="star-primary">
                         <h4>HELLO</h4>
-                        <p>Jordan is a multidisciplinary designer and artist with a focus on interface design and user experience. She always wants to learn something new and create a positive impact. She likes to make things, especially when it involves making things with other people.
+                            <p>Jordan is a multidisciplinary designer and artist with a focus on interface design and user experience. She always wants to learn something new and create a positive impact. She likes to make things, especially when it involves making things with other people.
                             <p>Get in touch: jordanwhitneymartin@gmail.com</p>
                             <p>And checkout: <a href="http://wewantto.design">we want to ___</a></p>
 
@@ -23,16 +23,17 @@
                                 <br>History and Philosophy // The Ohio State University</p>
 
                                 <h4>EXPERIENCE</h4> 
-                                <p>Visual/UI/UX Designer // Alder Planetarium: Zooniverse / Aug 2015–present
-                                    <br>Visual Designer // The Field Museum: Science & Education / Apr 2014–Jun 2015
-                                    <br>Art Director // FNewsmagazine / Jun 2013–Aug 2015</p>
+                                <p>Visual/UI Designer // Nelson Cash / present
+                                <br>Visual/UI/UX Designer // Alder Planetarium: Zooniverse / Aug 2015–Jan 2017
+                                <br>Visual Designer // The Field Museum: Science & Education / Apr 2014–Jun 2015
+                                <br>Art Director // FNewsmagazine / Jun 2013–Aug 2015</p>
 
-                                    <h4>EXHIBITION</h4>
-                                    <p>The Design Show 2015 // The Chicago Art Department
-                                        <br>Data as Art 2015 // Ford Engineering Design Center</p>
+                            <h4>EXHIBITION</h4>
+                                <p>The Design Show 2015 // The Chicago Art Department
+                                <br>Data as Art 2015 // Ford Engineering Design Center</p>
 
-                                        <h4>SPEAKING</h4>
-                                        <p>"Why Art Belongs in Science Museums" // NAEA Post-Op 2016 Symposium presentation</p>
+                            <h4>SPEAKING</h4>
+                                <p>"Why Art Belongs in Science Museums" // NAEA Post-Op 2016 Symposium presentation</p>
 
                                         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                                     </div>
