--- a/_includes/about_modal.html
+++ b/_includes/about_modal.html
@@ -25,7 +25,7 @@
                                 <h4>EXPERIENCE</h4> 
                                 <p>Visual/UI Designer // Nelson Cash / present
                                 <br>Visual/UI/UX Designer // Alder Planetarium: Zooniverse / Aug 2015–Jan 2017
-                                <br>Visual Designer // The Field Museum: Science & Education / Apr 2014–Jun 2015
+                                <br>Visual Designer // The Field Museum: Education / Apr 2014–Jun 2015
                                 <br>Art Director // FNewsmagazine / Jun 2013–Aug 2015</p>
 
                             <h4>EXHIBITION</h4>
