--- a/_includes/header.html
+++ b/_includes/header.html
@@ -40,7 +40,7 @@
             <div class="intro-body">
 
                 <div class="col-md-8">
-                    <h1 class="brand-heading js-site-title js-canvas-dom">Jordan Whitney Martin is a multidisciplinary designer and artist</h1>
+                    <h1 class="brand-heading js-site-title js-canvas-dom">Jordan Whitney Martin is a multidisciplinary designer</h1>
                     <a class="page-scroll button" href="#portfolio">
                         <div class="top">
                             <div class="label">SEE MY WORK</div>
