--- a/_includes/about_modal.html
+++ b/_includes/about_modal.html
@@ -23,7 +23,7 @@
                                 <br>History and Philosophy // The Ohio State University</p>
 
                                 <h4>EXPERIENCE</h4> 
-                                <p>Visual/UI Designer // Nelson Cash / present
+                                <p>Visual/UI Designer // IA Collaborative / present
                                 <br>Visual/UI/UX Designer // Alder Planetarium: Zooniverse / Aug 2015–Jan 2017
                                 <br>Visual Designer // The Field Museum: Education / Apr 2014–Jun 2015
                                 <br>Art Director // FNewsmagazine / Jun 2013–Aug 2015</p>
