--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,9 +22,6 @@
                 <li>
                     <a class="page-scroll" href="#portfolio">Work</a>
                 </li>
-                <li>
-                   <a class="page-scroll" class="portfolio-link" data-toggle="modal" href="#about-modal">About</a>
-               </li>
            </ul>
        </div>
        <!-- /.navbar-collapse -->
@@ -33,26 +30,32 @@
 </nav>
 
 <!-- Header -->
-<div id="bg">
- <header class="intro">
+<header class="intro">
      <div class="container">
         <div class="row">
             <div class="intro-body">
-
-                <div class="col-md-8">
-                    <h1 class="brand-heading js-site-title js-canvas-dom">Jordan Whitney Martin does design</h1>
+            <div id="image_map"> 
+                <div class="col-md-8 col-md-offset-6">
+                    <img src="/img/info.svg" alt="image map example" width=500 usemap="#about_map"> 
                     <a class="page-scroll button" href="#portfolio">
                         <div class="top">
-                            <div class="label">SEE MY WORK</div>
+                            <div class="label">PROJECTS</div>
                             <div class="button-border button-border-left"></div>
                             <div class="button-border button-border-top"></div>
                             <div class="button-border button-border-right"></div>
                             <div class="button-border button-border-bottom"></div>
-                        </div>
-                    </div>
-                </a>
+                    </div></a></div> 
+                    <map name="about_map"> 
+                        <area href="http://www.iacollaborative.com" alt="IA Collaborative" target="_blank" shape=rect coords="300,345,388,388"> 
+                        <area href="http://www.adlerplanetarium.org" alt="The Adler Planetarium" target="_blank" shape=rect coords="158,385,456,456">
+                        <area href="https://www.instagram.com/jordanwhitneym" alt="insta" target="_blank" shape=rect coords="83,455,370,530">
+                         <area href="mailto:jordanwhitneymartin@gmail.com?Subject=Hello" alt="mail" target="_blank" shape=rect coords="83,521,500,600">
+                    </map> 
+                     
+                    
+                </div>
             </div>
         </div>
     </div>
-</div>
 </header>
+
