--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
                     <a href="#page-top"></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#portfolio">Work</a>
+                    <a class="page-scroll" href="#portfolio">work</a>
                 </li>
            </ul>
        </div>
@@ -39,7 +39,7 @@
                     <img src="/img/info.svg" alt="image map example" width=500 usemap="#about_map"> 
                     <a class="page-scroll button" href="#portfolio">
                         <div class="top">
-                            <div class="label">PROJECTS</div>
+                            <div class="label">MY WORK</div>
                             <div class="button-border button-border-left"></div>
                             <div class="button-border button-border-top"></div>
                             <div class="button-border button-border-right"></div>
